test/classes/constructors/error-constructor-return-type.good
error-constructor-return-type.chpl:2: error: initializers may not declare a return type
